Config.toml update

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,7 +3,7 @@
 # https://blowfish.page/docs/getting-started/
 
  theme = "blowfish"
-# baseURL = "https://loco00003.github.io/locoweb/"
+ baseURL = "https://loco00003.github.io/locoweb/"
 defaultContentLanguage = "en"
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
