Correcciones #10 - Añadi el titulo loco0000, para que la pestaña no se mire tan vacia (sujeto a cambios)

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -1,7 +1,7 @@
 languageCode = "en"
 languageName = "English"
 weight = 1
-#title = "loco0000"
+title = "loco0000"
 
 [params]
   displayName = "EN"
