Actualizacion #1 - Traduccion de la pagina al español   -Creacion de archivos de configuracion para los menus y para la pagina principal   - Localizacion de cada maquina, seccion de whoami y curriculum.
- Tags removidos debido a conflictos entre idiomas.
- Correcion de typos en la pagina en ingles.
- Localizacion al japones ; pendiente

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -17,16 +17,16 @@
   weight = 10
 [[main]]
     name="resume"
-    pageRef="resume.md"
+    pageRef="resume"
     weight= 20
-[[main]]
-    name = "tags"
-    pageRef="tags"
-    weight=30
+#[[main]]
+#    name = "tags"
+#    pageRef="tags"
+#    weight=30
 
 [[main]]
     name="whoami"
-    pageRef="w.md"
+    pageRef="whoami"
     weight= 40
 #[[main]]
 #  name = "Parent"
