Traduccion #1 - Se empezo el trabajo de traduccion al japones, empezando por lo menus. Los cambios no se veran reflejados, se actualizo el archivo .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ public
 bitacorapagina.md
 #vscode
 .vscode
+
+# Traduccion al japones en proceso
+languages.ja.toml
+menus.ja.toml
+index.ja.md
+_index.ja.md
+
