Etc #3 - Adicion correo a la pagina principal

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -19,7 +19,7 @@ title = "loco0000"
    headline = "ハッキングにようこそ！"
    bio = "Electrical Engineering student and aspiring pentester."
    links = [
-#     { email = "mailto:hello@your_domain.com" },
+     { email = "mailto:srzi2000@protonmail.com" },
 #     { link = "https://link-to-some-website.com/" },
 #     { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
 #     { apple = "https://www.apple.com" },
