--- a/config/_default/languages.es.toml
+++ b/config/_default/languages.es.toml
@@ -22,7 +22,7 @@ title = "loco0000"
    headline = "ハッキングにようこそ！"
    bio = "Estudiante de ingeniería electrica y aspirante a pentester."
    links = [
-#     { email = "mailto:hello@your_domain.com" },
+     { email = "mailto:srzi2000@protonmail.com" },
 #     { link = "https://link-to-some-website.com/" },
 #     { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
 #     { apple = "https://www.apple.com" },
